# peck-engineering-assessment

./: README.md  project_outline.drawio
app-backend/: Dockerfile  pyproject.toml  run_project.sh
app-backend/app_backend/: app.py  food_facility.py
app-backend/app_backend/connection/: db_connection.py
app-backend/docker/: docker-compose.yml
app_backend/: Dockerfile  pyproject.toml  run_project.sh
app_backend/app_backend/: app.py  food_facility.py
app_backend/app_backend/connection/: db_connection.py  local_settings.py
app_backend/app_backend/static/: styles.css
app_backend/app_backend/templates/: table.html
app_backend/tests/: test_Food_Facility.py  test_db_connection.py  test_endpoint.py
