[tool.poetry]
name = "app-backend"
version = "0.1.0"
description = ""
authors = ["krodiv <krodiv@gmail.com>"]
readme = "README.md"
packages = [{include = "app_backend"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
