[tool.poetry]
name = "app-backend"
version = "0.1.0"
description = ""
authors = ["krodiv <krodiv@gmail.com>"]
readme = "README.md"
# packages = [{include = "app_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
sqlalchemy = "^2.0.20"
sqlalchemy-orm = "^1.2.10"
sqlalchemy-utils = "^0.41.1"
pytest = "^7.4.0"
psycopg2 = "2.9.7"
flask-sqlalchemy = "^3.0.5"
pandas = "^2.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
